Hardcode a book and style it

--- a/index.html
+++ b/index.html
@@ -11,5 +11,20 @@
     
     <h1>Your Ebook Library</h1>
 
+    <main>
+        <div class="book-card">
+            <p>Title: The Hobbit</p>
+            <p>Author: J R R Tolkien</p>
+            <p>Pages: 310</p>
+            <button class="read-button">Read</button><button class="remove-button">Remove</button>
+        </div>
+        <button class="add-button">Add Book</button>
+    </main>
+
+    <footer>
+        This website was created by ErreurDeSyntaxe in the context of 
+        <a href="https://www.theodinproject.com/">The Odin Project</a>'s 
+        <a href="https://www.theodinproject.com/paths/full-stack-javascript">Full Stack JavaScript</a> path. 
+    </footer>
 </body>
 </html>
