Display books on bookshelf

--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 <body>
     <script src="./script.js" defer></script>
     
-    <h1>Your Ebook Library</h1>
+    <header><h1>Your Library</h1></header>
 
     <main>
-        <div class="book-card">
-            <p>Title: The Hobbit</p>
-            <p>Author: J R R Tolkien</p>
-            <p>Pages: 310</p>
-            <button class="read-button">Read</button><button class="remove-button">Remove</button>
-        </div>
         <button class="add-button">Add Book</button>
+        <div class="bookshelf">
+            <!-- The user's books will come here -->
+        </div>
     </main>
 
     <footer>
