--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header><h1>Your Library</h1></header>
 
     <main>
-        <button class="add-button">Add Book</button>
+        <button class="add-button">+ Add Book</button>
         <div class="bookshelf">
             <!-- The user's books will come here -->
         </div>
