Add & Style dialog box

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
         </div>
     </main>
 
+    <dialog class="add-book-box">
+        <form action="">
+            <input type="text" placeholder="Title">
+            <input type="text" placeholder="Author">
+            <input type="number" placeholder="123 pages">
+            <div>Have you read it?</div>
+            <input id="alreadyRead" type="checkbox">
+            <br>
+            <button type="button" id="confirm-button">Confirm</button>
+        </form>
+    </dialog>
+
+    </form>
+    
     <footer>
         This website was created by ErreurDeSyntaxe in the context of 
         <a href="https://www.theodinproject.com/">The Odin Project</a>'s 
