Add book to library (book x2 bug)

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <dialog class="add-book-box">
         <form action="">
-            <input type="text" placeholder="Title">
-            <input type="text" placeholder="Author">
-            <input type="number" placeholder="123 pages">
+            <input id="input-title" type="text" placeholder="Title">
+            <input id="input-author" type="text" placeholder="Author">
+            <input id="input-page-count" type="number" placeholder="123 pages">
             <div>Have you read it?</div>
             <input id="alreadyRead" type="checkbox">
             <br>
-            <button type="button" id="confirm-button">Confirm</button>
+            <button type="submit" id="confirm-button">Confirm</button>
         </form>
     </dialog>
 
