--- a/index.html
+++ b/index.html
@@ -1,41 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Your Library</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <script src="./script.js" defer></script>
-    
-    <header><h1>Your Library</h1></header>
+    <link
+      rel="stylesheet"
+      href="./style.css"
+    />
+    <script
+      src="./script.js"
+      defer
+    ></script>
+  </head>
+  <body>
+    <header class="header"><h1>Your Library</h1></header>
 
-    <main>
-        <button class="add-button">+ Add Book</button>
-        <div class="bookshelf">
-            <!-- The user's books will come here -->
-        </div>
+    <main class="main">
+      <button class="btn-form-open">+ Add Book</button>
+      <div class="bookshelf">
+        <!-- The user's books will come here -->
+      </div>
     </main>
 
-    <dialog class="add-book-box">
-        <form id="add-book-form">
-            <input id="title" type="text" placeholder="Title" required maxlength="100">
-            <input id="author" type="text" placeholder="Author" required maxlength="100">
-            <input id="page-count" type="number" placeholder="123 pages" required min="1" max="100">
-            <div>Have you read it?</div>
-            <input id="wasRead" type="checkbox">
-            <br>
-            <button type="button" id="confirm-button">Confirm</button>
-        </form>
+    <dialog class="dialog">
+      <form id="add-book-form">
+        <input
+          id="title"
+          type="text"
+          placeholder="Title"
+          required
+          maxlength="100"
+        />
+        <input
+          id="author"
+          type="text"
+          placeholder="Author"
+          required
+          maxlength="100"
+        />
+        <input
+          id="page-count"
+          type="number"
+          placeholder="123 pages"
+          required
+          min="1"
+          max="100"
+        />
+        <div>Have you read it?</div>
+        <input
+          id="wasRead"
+          type="checkbox"
+        />
+        <br />
+        <button
+          type="button"
+          id="confirm-button"
+        >
+          Confirm
+        </button>
+      </form>
     </dialog>
 
-    </form>
-    
-    <footer>
-        This website was created by ErreurDeSyntaxe in the context of 
-        <a href="https://www.theodinproject.com/">The Odin Project</a>'s 
-        <a href="https://www.theodinproject.com/paths/full-stack-javascript">Full Stack JavaScript</a> path. 
+    <footer class="footer">
+      This website was created by ErreurDeSyntaxe in the context of
+      <a
+        class="footer-link"
+        href="https://www.theodinproject.com/"
+        >The Odin Project</a
+      >'s
+      <a
+        class="footer-link"
+        href="https://www.theodinproject.com/paths/full-stack-javascript"
+        >Full Stack JavaScript</a
+      >
+      path.
     </footer>
-</body>
+  </body>
 </html>
