Use ES6 Classes & JS best Prac

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
 
     <dialog class="dialog">
-      <form id="add-book-form">
+      <form id="form">
         <input
           id="title"
           type="text"
@@ -52,13 +52,13 @@
         />
         <div>Have you read it?</div>
         <input
-          id="wasRead"
+          id="read-status"
           type="checkbox"
         />
         <br />
         <button
           type="button"
-          id="confirm-button"
+          id="btn-confirm"
         >
           Confirm
         </button>
